# Microbit

./: Cargo.toml
arrow/: Cargo.toml
arrow/src/: main.rs
driver-check/: Cargo.toml
driver-check/src/: main.rs
driver-magno/: Cargo.toml
driver-magno/src/: hal.rs  lib.rs  main.rs  raw.rs
driver-temp/: Cargo.toml
driver-temp/src/: lib.rs
roulette/: Cargo.toml
roulette/src/: main.rs
serial-setup/: Cargo.toml
siren/: Cargo.toml
siren/src/: main.rs
snake/: Cargo.toml
snake/src/: main.rs
string-serial/: Cargo.toml
string-serial/src/: main.rs
urt-i2c/: Cargo.toml
urt-i2c/src/: main.rs
