[workspace]
members = [
  "arrow",
  "roulette",
  "serial-setup",
  "siren",
  "snake",
  "string-serial",
  "urt-i2c",
]

resolver = "2"

[workspace.dependencies]
cortex-m = { version = "0.7.7", features = [
  "critical-section-single-core",
  "inline-asm",
] }
cortex-m-rt = "0.7.5"
critical-section = "1"
critical-section-lock-mut = "0.1"
embedded-hal = "1.0.0"
microbit-v2 = "0.16.0"
nrf52833-hal = "0.19.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.2"
serial-setup = { path = "serial-setup" }
