[package]
name = "driver-check"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
critical-section.workspace = true
critical-section-lock-mut.workspace = true
microbit-v2.workspace = true
panic-rtt-target.workspace = true
rtt-target.workspace = true
driver-temp = { path = "../driver-temp" }
