[package]
name = "driver-check"
version = "0.1.0"
edition = "2024"

[[bin]]
bench = false
name = "driver-check"
test = false

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
critical-section.workspace = true
critical-section-lock-mut.workspace = true
driver-magno = { path = "../driver-magno" }
driver-temp = { path = "../driver-temp" }
microbit-v2.workspace = true
panic-rtt-target.workspace = true
rtt-target.workspace = true
