[package]
name = "siren"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
critical-section = "1"
critical-section-lock-mut = "0.1"
embedded-hal.workspace = true
microbit-v2.workspace = true
panic-rtt-target.workspace = true
rtt-target.workspace = true
