[package]
name = "string-serial"
version = "0.1.0"
edition = "2024"

[[bin]]
bench = false
name = "string-serial"
test = false

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
microbit-v2.workspace = true
panic-rtt-target.workspace = true
rtt-target.workspace = true
serial-setup.workspace = true
